2008-10-30  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* spatial.hh (TRANSMITTED_INTERVALS_MAX): New constant.

	* spatial.cc (spatial_negotiator::send,
	spatial_negotiator::receive): Allow transmission of an arbitrary
	number of spatial negotiation intervals.

	* subconnector.hh (SPIKE_BUFFER_MAX): New constant.

	* subconnector.cc (event_output_subconnector::send,
	event_input_subconnector_global, event_input_subconnector_local):
	Allow transmission of an arbitrary number of spikes.

	* spatial.cc (spatial_output_negotiator::negotiate): Bugfix: Use
	remote_n_proc instead of n_processes when sending to remote side.

	* music/application_map.hh, application_map.cc, index_map.cc,
	music/interval.hh, music/interval_tree.hh, music/ioutils.hh,
	ioutils.cc, music/spatial.hh, spatial.cc, music/subconnector.hh,
	subconnector.cc, music/temporal.hh, temporal.cc: New files.

	* Changes throughout to implement propagation of configuration
	information and routing of spikes.

2008-10-16  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/FIBO.hh (FIBO::buffer): Bugfix: Changed to vector of char
	instead of char*.

2008-10-14  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/port.hh, port.cc (port::is_connected): Make sure this
	method works also in the runtime phase.

2008-10-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am, music/FIBO.hh, FIBO.cc, clock.cc,
	music/configuration.hh, configuration.cc, music/connector.hh,
	connector.cc, music/event_router.hh, event_router.cc,
	music/port.hh, port.cc, music/runtime.hh, runtime.cc,
	music/setup.hh, setup.cc, synchronizer.cc: A first, cheating,
	approximation of the implementation of spike communication.  Will
	be followed by cleanups and real implementation.  The present
	implementation only allows two applications with an output and
	input port respectively.  The ports have a constant width given in
	ports.hh and the sender and receiver application must have equal
	number of MPI processes.
